# ProjectA

./: .gitignore  PhaseAProject.md  README.md  TODO.md  claude.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/api/: __init__.py  analytics_routes.py  import_routes.py
backend/app/core/: config.py
backend/app/db/: README.md  __init__.py  neo4j_driver.py  queries.py
backend/app/models/: README.md  __init__.py  enums.py  nodes.py  schemas.py
backend/app/services/: __init__.py  analytics_service.py  base_service.py  defects_import.py  fmea_import.py  hara_import.py  requirements_import.py  tests_import.py
backend/data/seed/: README.md  fmea_data.json  hara_data.json  requirements_data.json  tests_data.json
backend/scripts/: README.md  init_schema.py  load_seed_data.py
backend/tests/: README.md  conftest.py
backend/tests/integration/: test_analytics_api.py  test_import_api.py
backend/tests/unit/: test_hara_import_service.py
data/schema/: SCHEMA.md  neo4j_schema.cypher
docs/prds/: prd-phase1.md  prd-phase2.md  prd-phase3.md  prd-phase4.md
frontend/: .env.example  Dockerfile  nginx.conf  package.json  tsconfig.json  vite.config.ts
